2009-06-27  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Added Portuguese translation. Thanks to André Glória for providing.


2009-05-25  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Some more clean up of code.
 * Update of documentation for 0.4 release.


2009-05-21  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Added configuration dialog.


2009-05-19  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Make toolbar document sensitive.


2009-05-17  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Adding some more items to toolbar for centerin, left and right formatted
   text. Created LaTeX code based on needs still some improvement. Please
   use with care.


2009-05-15  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Adding a toolbar for common LaTeX format topics.


2009-04-17  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Set undo points for better redo/undo on inserting formatings.
 * Make reference type inside insert reference dialog accessible by
   keyboard.


2009-04-12  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Added some new lines into latex beamer template.


2009-04-10  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Sort entries on insert reference dialog by alphabet.


2009-03-30  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Moved replacement functions into their own submenu.
 * Added key bindings for formatting text with bold, italic and typewriter
   font face.


2009-03-28  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Use a text field with pull down instead of a normal combo box for
   font size at LaTeX wizard.


2009-03-27  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * doc/geanylatex.tex: Added documentation written in LaTeX.


2009-03-20  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Replace \u-UTF-8 letters by octal coded chars. Huge thanks to
   Dominic Hopf for providing patch and fighting that fight.