@@ -22,10 +22,6 @@
 #include "bibtex.h"
 #include "reftex.h"
 
-#define glatex_set_status(entry_number, flag) \
-	fields[entry_number] = flag;
-
-
 #if 0
 static int get_entry_pos(char *str)
 {
@@ -44,99 +40,128 @@ static int get_entry_pos(char *str)
 void glatex_insert_bibtex_entry(G_GNUC_UNUSED GtkMenuItem * menuitem,
 						 G_GNUC_UNUSED gpointer gdata)
 {
-	int doctype = GPOINTER_TO_INT(gdata);
-	gboolean fields[GLATEX_BIBTEX_N_ENTRIES];
-	gchar *output = g_strdup("@");
-	int i;
-
-	for (i = 0; i < GLATEX_BIBTEX_N_ENTRIES; i++)
-	{
-		glatex_set_status(i, FALSE);
-	}
+	gint i;
+	gint doctype = GPOINTER_TO_INT(gdata);
+	GPtrArray *entry = glatex_bibtex_init_empty_entry();
 
 	switch(doctype) {
 	case GLATEX_BIBTEX_ARTICLE:
-		glatex_set_status(GLATEX_BIBTEX_AUTHOR, TRUE);
-		glatex_set_status(GLATEX_BIBTEX_TITLE, TRUE);
-		glatex_set_status(GLATEX_BIBTEX_JOURNAL, TRUE);
-		glatex_set_status(GLATEX_BIBTEX_YEAR, TRUE);
+		g_ptr_array_index(entry, GLATEX_BIBTEX_AUTHOR) = g_strdup("\0");
+		g_ptr_array_index(entry, GLATEX_BIBTEX_TITLE) = g_strdup("\0");
+		g_ptr_array_index(entry, GLATEX_BIBTEX_JOURNAL) = g_strdup("\0");
+		g_ptr_array_index(entry, GLATEX_BIBTEX_YEAR) = g_strdup("\0");
 		break;
 	case GLATEX_BIBTEX_BOOK:
-		glatex_set_status(GLATEX_BIBTEX_AUTHOR, TRUE);
-		glatex_set_status(GLATEX_BIBTEX_EDITOR, TRUE);
-		glatex_set_status(GLATEX_BIBTEX_TITLE, TRUE);
-		glatex_set_status(GLATEX_BIBTEX_PUBLISHER, TRUE);
-		glatex_set_status(GLATEX_BIBTEX_YEAR, TRUE);
+		g_ptr_array_index(entry, GLATEX_BIBTEX_AUTHOR) = g_strdup("\0");
+		g_ptr_array_index(entry, GLATEX_BIBTEX_EDITOR) = g_strdup("\0");
+		g_ptr_array_index(entry, GLATEX_BIBTEX_TITLE) = g_strdup("\0");
+		g_ptr_array_index(entry, GLATEX_BIBTEX_PUBLISHER) = g_strdup("\0");
+		g_ptr_array_index(entry, GLATEX_BIBTEX_YEAR) = g_strdup("\0");
 		break;
 	case GLATEX_BIBTEX_BOOKLET:
-		glatex_set_status(GLATEX_BIBTEX_TITLE, TRUE);
+		g_ptr_array_index(entry, GLATEX_BIBTEX_TITLE) = g_strdup("\0");
 		break;
 	case GLATEX_BIBTEX_CONFERENCE:
 	case GLATEX_BIBTEX_INCOLLECTION:
 	case GLATEX_BIBTEX_INPROCEEDINGS:
-		glatex_set_status(GLATEX_BIBTEX_AUTHOR, TRUE);
-		glatex_set_status(GLATEX_BIBTEX_TITLE, TRUE);
-		glatex_set_status(GLATEX_BIBTEX_BOOKTITLE, TRUE);
-		glatex_set_status(GLATEX_BIBTEX_YEAR, TRUE);
+		g_ptr_array_index(entry, GLATEX_BIBTEX_AUTHOR) = g_strdup("\0");
+		g_ptr_array_index(entry, GLATEX_BIBTEX_TITLE) = g_strdup("\0");
+		g_ptr_array_index(entry, GLATEX_BIBTEX_BOOKTITLE) = g_strdup("\0");
+		g_ptr_array_index(entry, GLATEX_BIBTEX_YEAR) = g_strdup("\0");
 		break;
 	case GLATEX_BIBTEX_INBOOK:
-		glatex_set_status(GLATEX_BIBTEX_AUTHOR, TRUE);
-		glatex_set_status(GLATEX_BIBTEX_EDITOR, TRUE);
-		glatex_set_status(GLATEX_BIBTEX_TITLE, TRUE);
-		glatex_set_status(GLATEX_BIBTEX_CHAPTER, TRUE);
-		glatex_set_status(GLATEX_BIBTEX_PAGES, TRUE);
-		glatex_set_status(GLATEX_BIBTEX_PUBLISHER, TRUE);
-		glatex_set_status(GLATEX_BIBTEX_YEAR, TRUE);
+		g_ptr_array_index(entry, GLATEX_BIBTEX_AUTHOR) = g_strdup("\0");
+		g_ptr_array_index(entry, GLATEX_BIBTEX_EDITOR) = g_strdup("\0");
+		g_ptr_array_index(entry, GLATEX_BIBTEX_TITLE) = g_strdup("\0");
+		g_ptr_array_index(entry, GLATEX_BIBTEX_CHAPTER) = g_strdup("\0");
+		g_ptr_array_index(entry, GLATEX_BIBTEX_PAGES) = g_strdup("\0");
+		g_ptr_array_index(entry, GLATEX_BIBTEX_PUBLISHER) = g_strdup("\0");
+		g_ptr_array_index(entry, GLATEX_BIBTEX_YEAR) = g_strdup("\0");
 		break;
 	case GLATEX_BIBTEX_MANUAL:
-		glatex_set_status(GLATEX_BIBTEX_TITLE, TRUE);
+		g_ptr_array_index(entry, GLATEX_BIBTEX_TITLE) = g_strdup("\0");
 		break;
 	case GLATEX_BIBTEX_MASTERSTHESIS:
 	case GLATEX_BIBTEX_PHDTHESIS:
-		glatex_set_status(GLATEX_BIBTEX_AUTHOR, TRUE);
-		glatex_set_status(GLATEX_BIBTEX_TITLE, TRUE);
-		glatex_set_status(GLATEX_BIBTEX_SCHOOL, TRUE);
-		glatex_set_status(GLATEX_BIBTEX_YEAR, TRUE);
+		g_ptr_array_index(entry, GLATEX_BIBTEX_AUTHOR) = g_strdup("\0");
+		g_ptr_array_index(entry, GLATEX_BIBTEX_TITLE) = g_strdup("\0");
+		g_ptr_array_index(entry, GLATEX_BIBTEX_SCHOOL) = g_strdup("\0");
+		g_ptr_array_index(entry, GLATEX_BIBTEX_YEAR) = g_strdup("\0");
 		break;
 	case GLATEX_BIBTEX_MISC:
 		for (i = 0; i < GLATEX_BIBTEX_N_ENTRIES; i++)
 		{
-			glatex_set_status(i, TRUE);
+			g_ptr_array_index(entry, i) = g_strdup("\0");
 		}
 	case GLATEX_BIBTEX_TECHREPORT:
-		glatex_set_status(GLATEX_BIBTEX_AUTHOR, TRUE);
-		glatex_set_status(GLATEX_BIBTEX_TITLE, TRUE);
-		glatex_set_status(GLATEX_BIBTEX_INSTITUTION, TRUE);
-		glatex_set_status(GLATEX_BIBTEX_YEAR, TRUE);
+		g_ptr_array_index(entry, GLATEX_BIBTEX_AUTHOR) = g_strdup("\0");
+		g_ptr_array_index(entry, GLATEX_BIBTEX_TITLE) = g_strdup("\0");
+		g_ptr_array_index(entry, GLATEX_BIBTEX_INSTITUTION) = g_strdup("\0");
+		g_ptr_array_index(entry, GLATEX_BIBTEX_YEAR) = g_strdup("\0");
 		break;
 	case GLATEX_BIBTEX_UNPUBLISHED:
-		glatex_set_status(GLATEX_BIBTEX_AUTHOR, TRUE);
-		glatex_set_status(GLATEX_BIBTEX_TITLE, TRUE);
-		glatex_set_status(GLATEX_BIBTEX_NOTE, TRUE);
+		g_ptr_array_index(entry, GLATEX_BIBTEX_AUTHOR) = g_strdup("\0");
+		g_ptr_array_index(entry, GLATEX_BIBTEX_TITLE) = g_strdup("\0");
+		g_ptr_array_index(entry, GLATEX_BIBTEX_NOTE) = g_strdup("\0");
 		break;
 	case GLATEX_BIBTEX_PROCEEDINGS:
-		glatex_set_status(GLATEX_BIBTEX_TITLE, TRUE);
-		glatex_set_status(GLATEX_BIBTEX_YEAR, TRUE);
+		g_ptr_array_index(entry, GLATEX_BIBTEX_TITLE) = g_strdup("\0");
+		g_ptr_array_index(entry, GLATEX_BIBTEX_YEAR) = g_strdup("\0");
 		break;
 	default:
 		for (i = 0; i < GLATEX_BIBTEX_N_ENTRIES; i++)
 		{
-			glatex_set_status(i, TRUE);
+			g_ptr_array_index(entry, i) = g_strdup("\0");
 		}
 	}
 
+	glatex_bibtex_write_entry(entry, doctype);
+
+	g_ptr_array_free(entry, TRUE);
+}
+
+/* Creating and initialising a array for a bibTeX entry with NULL pointers*/
+GPtrArray *glatex_bibtex_init_empty_entry()
+{
+	gint i;
+	GPtrArray *entry = g_ptr_array_new();
+	g_ptr_array_set_size(entry, GLATEX_BIBTEX_N_ENTRIES);
+	return entry;
+}
+
+
+void glatex_bibtex_write_entry(GPtrArray *entry, gint doctype)
+{
+	gint i;
+	gchar *output = g_strdup("@");
+
+	/* Adding the doctype to entry */
 	output = g_strconcat(output, glatex_label_types[doctype], "{ \n",NULL);
+
+	/* Adding the keywords and values to entry */
 	for (i = 0; i < GLATEX_BIBTEX_N_ENTRIES; i++)
 	{
-		if (fields[i] == TRUE)
+		/* Check whether a field has been marked for being used */
+		if (g_ptr_array_index (entry, i) != NULL)
 		{
-			output = g_strconcat(output, glatex_label_entry_keywords[i], " = {},\n", NULL);
+			/* Check whether a field was only set for being used ... */
+			if (utils_str_equal(g_ptr_array_index (entry, i), "\0"))
+			{
+				output = g_strconcat(output,
+					glatex_label_entry_keywords[i], " = {},\n", NULL);
+			}
+			/* ... or has some real value inside. */
+			else
+			{
+				output = g_strconcat(output,
+					glatex_label_entry_keywords[i], " = {", g_ptr_array_index(entry, i),
+					"},\n", NULL);
+			}
 		}
 	}
 
 	output = g_strconcat(output, "}\n", NULL);
 	glatex_insert_string(output, FALSE);
 
-	g_free(output);
 }
 
