@@ -1,3 +1,8 @@
+2009-07-08  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * Migrated bibTeX inserting entry framework to make usage of a GPtrArray.
+
+
 2009-06-27  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * Added Portuguese translation. Thanks to André Glória for providing.
